GNOME Bugzilla – Bug 690765
Another error in introspection data
Last modified: 2012-12-27 20:28:34 UTC
In http://git.gnome.org/browse/gnome-keyring/tree/daemon/dbus/gkd-secret-introspect.c#n66, we have: <property name='Locked' type='s' access='read'/> 'Locked' is boolean property, so it should be type='b' instead.
Created attachment 232259 [details] [review] Set correct type for Collection's "Locked" property.
Thanks for catching that.