dbus: Set correct type for Collection's "Locked" property.

https://bugzilla.gnome.org/show_bug.cgi?id=690765